# TheEncoder

./: .gitignore  .project_complete.txt  BUGFIX_v1.0.1.md  CHANGELOG  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  OPEN_SOURCE_TRANSFORMATION.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  SPSS_Prep_Tool.spec  TODO.md  TheVision.txt  UPDATE_v1.2.0_Arabic_Variable_Names.md  app.py  build_exe.py  encoder.py  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.bat  sample_input.xlsx  sps_generator.py  utils.py
.github/: .pre-commit-config.yaml
.github/workflows/: ci.yml  release.yml
docs/: BUILD_INSTRUCTIONS.md  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  QUICKSTART.md  README.md  README_EXE_DISTRIBUTION.md
docs/releases/: BUGFIX_v1.1.1_BidiCharacters.md  BUGFIX_v1.1.2_SPSS_Import.md  README.md  UPDATES_v1.1.0.md
examples/: README.md
src/spss_prep/: __init__.py  app.py  encoder.py  sps_generator.py  utils.py
tests/: test_encoding.py
